feat: authorized server