@@ -1,55 +1,69 @@
 package com.clement.fokuz.service;
 
 
-import com.clement.fokuz.enity.*;
+import com.clement.fokuz.entity.*;
 import com.clement.fokuz.repository.ClientRepository;
-import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import org.springframework.context.annotation.Primary;
 import org.springframework.security.oauth2.server.authorization.client.RegisteredClient;
 import org.springframework.security.oauth2.server.authorization.client.RegisteredClientRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
-@Transactional
-@AllArgsConstructor
 @Primary
+@AllArgsConstructor
+@Transactional(readOnly = true)
 public class ClientService implements RegisteredClientRepository {
 
-    private ClientRepository clientRepository;
+    private final ClientRepository clientRepository;
 
     @Override
+    @Transactional
     public void save(RegisteredClient registeredClient) {
-//        Client client = Client.builder()
-//                .clientId(registeredClient.getClientId())
-//                .secret(registeredClient.getClientSecret())
-//                .authenticationMethods(registeredClient.getClientAuthenticationMethods().stream()
-//                        .map(AuthenticationMethods.from()).toList())
-//                .build();
-
         Client c = new Client();
+
         c.setClientId(registeredClient.getClientId());
         c.setSecret(registeredClient.getClientSecret());
-        c.setAuthenticationMethods(registeredClient.getClientAuthenticationMethods().stream()
-                .map(a -> AuthenticationMethods.from(a, c)).toList());
-        c.setGrantTypes(registeredClient.getAuthorizationGrantTypes().stream().map(g -> GrantTypes.from(g, c)).toList());
-        c.setRedirectUrls(registeredClient.getRedirectUris().stream().map(url -> RedirectUrl.from(url, c)).toList());
-        c.setScopes(registeredClient.getScopes().stream().map(s -> Scopes.from(s, c)).toList());
-        clientRepository.save(c);
+        c.setAuthenticationMethods(
+                registeredClient.getClientAuthenticationMethods()
+                        .stream().map(a -> AuthenticationMethod.from(a, c))
+                        .collect(Collectors.toList())
+        );
+        c.setGrantTypes(
+                registeredClient.getAuthorizationGrantTypes()
+                        .stream().map(g -> GrantType.from(g, c))
+                        .collect(Collectors.toList())
+        );
+        c.setRedirectUrls(
+                registeredClient.getRedirectUris()
+                        .stream().map(u -> RedirectUrl.from(u, c))
+                        .collect(Collectors.toList())
+        );
+        c.setScopes(
+                registeredClient.getScopes()
+                        .stream().map(s -> Scope.from(s, c))
+                        .collect(Collectors.toList())
+        );
 
+        clientRepository.save(c);
     }
 
     @Override
     public RegisteredClient findById(String id) {
-        var c = clientRepository.findById(UUID.fromString(id));
-        return c.map(Client::fromRegisterClient).orElseThrow(() -> new RuntimeException("Error"));
+        var client = clientRepository.findById(Integer.parseInt(id));
+
+        return client.map(Client::fromClient)
+                .orElseThrow(() -> new RuntimeException(":("));
     }
 
     @Override
     public RegisteredClient findByClientId(String clientId) {
-        var c = clientRepository.findByClientId(UUID.fromString(clientId));
-        return c.map(Client::fromRegisterClient).orElseThrow(() -> new RuntimeException("Error"));
+        var client = clientRepository.findByClientId(clientId);
+
+        return client.map(Client::fromClient)
+                .orElseThrow(() -> new RuntimeException(":("));
     }
 }
